# stepmania-event

./: CMakeLists.txt  LICENSE  README.md  StepmaniaCore.cmake
.github/workflows/: ci.yml
CMake/: CreateExports.cmake  DefineOptions.cmake  FixExports.cmake
Data/Web/: index.html
Docs/Luadoc/: Lua.xml
Plugins/: CMakeLists.txt  Embed.in.cpp  HelloWorldPlugin.lib  README.md
Plugins/ADPLight/: CMakeLists.txt  Plugin.cpp  Plugin.h
Plugins/ADPLight/lib/: adp.cmake  hidapi.cmake
Plugins/ADPLight/lib/adp/: Adp.h
Plugins/ADPLight/lib/adp/Model/: Device.cpp  Device.h  Firmware.cpp  Firmware.h  Log.cpp  Log.h  Reporter.cpp  Reporter.h  Utils.cpp  Utils.h
Plugins/GrooveStatsPlugin/: CMakeLists.txt  GSReguests.h  GrooveStatsClient.cpp  GrooveStatsClient.h  GrooveStatsPlugin.cpp  GrooveStatsPlugin.h  Metrics.ini  README.md
Plugins/GrooveStatsPlugin/Languages/: en.ini
Plugins/HelloWorld/: CMakeLists.txt  HelloWorldPlugin.cpp  HelloWorldPlugin.h
Plugins/HelloWorldPlugin/: CMakeLists.txt  HelloWorldPlugin.cpp  HelloWorldPlugin.h  README.md
Plugins/Modules/: CMakeRC.cmake  FindCurlPP.cmake  FindLibCurl.cmake  FindLibUsb.cmake  FindLibWebsocketpp.cmake
Plugins/Padmiss/: CMakeLists.txt  NotesWriterPadmiss.h  PadmissClient.cpp  PadmissClient.h  PadmissPlugin.cpp  PadmissPlugin.h  ScreenOptionsManageProfilesPM.cpp  ScreenOptionsManageProfilesPM.h
Plugins/PadmissPlugin/: CMakeLists.txt  Metrics.ini  NotesWriterPadmiss.cpp  PadmissClient.cpp  PadmissClient.h  PadmissPlugin.cpp  PadmissPlugin.h  ProfileState.cpp  ProfileState.h  Reader.cpp  Reader.h  ScreenPadmiss.cpp  ScreenPadmiss.h
Plugins/PadmissPlugin/lib/libusb/include/libusb-1.0/: libusb.h
Plugins/PadmissPlugin/resources/: metrics.ini
Plugins/PadmissPlugin/resources/Languages/: en.ini
Plugins/PluginTest/: CMakeLists.txt  Plugin.cpp  Plugin.h
Plugins/WebSocket/: CMakeLists.txt  WebsocketPlugin.cpp  WebsocketPlugin.h
Plugins/WebSocketPlugin/: CMakeLists.txt  SocketHandler.cpp  SocketHandler.h  WebSocketPlugin.cpp  WebSocketPlugin.h
Plugins/lib/: Curl.txt
Program/: 8p.rar
Themes/_fallback/: metrics.ini
Themes/_fallback/Languages/: en.ini  nl.ini
Themes/_fallback/Scripts/: 00 ManyPlayerHelper.lua  00 init.lua  02 Branches.lua  02 Colors.lua  02 Other.lua  03 DisplaySpecs.lua  03 Gameplay.lua
Themes/default/: 8p.rar  ThemeInfo.ini  metrics.ini
Themes/default/BGAnimations/: ScreenMapControllers decorations.lua  ScreenOptionsTheme underlay.lua  ScreenProfileLoad overlay.lua  ScreenSelectMusic in.lua  ScreenSelectMusic overlay.lua  ScreenSelectPlayMode2 underlay.lua  ScreenSystemLayer overlay.lua  ScreenTitleMenu decorations.lua  ScreenWithMenuElements decorations.lua
Themes/default/Graphics/: ComboGraphP3 NormalCombo.lua  ComboGraphP4 NormalCombo.lua  ComboGraphP5 NormalCombo.lua  ComboGraphP6 NormalCombo.lua  ScreenSelectMusic header.lua
Themes/default/Languages/: en.ini
Themes/default/Scripts/: 03 Gameplay.lua  99 SL-ThemePrefs.lua  Plumbing.lua  SL-Branches.lua  SL_Init.lua
Xcode/Patcher/: Patcher_Prefix.pch  Upgrader.h  main.m
src/: ActiveAttackList.cpp  Actor.cpp  Actor.h  ActorFrame.cpp  ActorFrame.h  ActorFrameTexture.cpp  ActorFrameTexture.h  ActorMultiTexture.cpp  ActorMultiTexture.h  ActorMultiVertex.cpp  ActorMultiVertex.h  ActorProxy.cpp  ActorScroller.cpp  ActorScroller.h  ActorSound.cpp  ActorSound.h  ActorUtil.cpp  ActorUtil.h  AdjustSync.cpp  AdjustSync.h  AnnouncerManager.cpp  AnnouncerManager.h  ArrowEffects.cpp  Attack.cpp  Attack.h  AttackDisplay.cpp  AttackDisplay.h  AutoActor.cpp  AutoActor.h  AutoKeysounds.cpp  AutoKeysounds.h  BGAnimation.cpp  BGAnimation.h  BGAnimationLayer.cpp  BGAnimationLayer.h  BPMDisplay.cpp  BPMDisplay.h  Background.cpp  Background.h  BackgroundUtil.cpp  (+611 more)
src/Texture Font Generator/: Utils.h
src/arch/: RageDriver.cpp  RageDriver.h  arch_default.h
src/arch/ArchHooks/: ArchHooks.cpp  ArchHooks.h  ArchHooks_MacOSX.h  ArchHooks_Unix.cpp  ArchHooks_Unix.h  ArchHooks_Win32.cpp  ArchHooks_Win32.h  ArchHooks_Win32Static.cpp
src/arch/Dialog/: Dialog.cpp  Dialog.h  DialogDriver.cpp  DialogDriver.h  DialogDriver_MacOSX.cpp  DialogDriver_MacOSX.h  DialogDriver_Win32.cpp  DialogDriver_Win32.h
src/arch/InputHandler/: InputHandler.cpp  InputHandler.h  InputHandler_DirectInput.cpp  InputHandler_DirectInput.h  InputHandler_DirectInputHelper.cpp  InputHandler_DirectInputHelper.h  InputHandler_Linux_Event.cpp  InputHandler_Linux_Event.h  InputHandler_Linux_Joystick.cpp  InputHandler_Linux_Joystick.h  InputHandler_Linux_PIUIO.cpp  InputHandler_Linux_PIUIO.h  InputHandler_Linux_tty.cpp  InputHandler_Linux_tty.h  InputHandler_MacOSX_HID.cpp  InputHandler_MacOSX_HID.h  InputHandler_MonkeyKeyboard.cpp  InputHandler_MonkeyKeyboard.h  InputHandler_SextetStream.cpp  InputHandler_SextetStream.h  InputHandler_Win32_MIDI.cpp  InputHandler_Win32_MIDI.h  InputHandler_Win32_Para.cpp  InputHandler_Win32_Para.h  InputHandler_Win32_Pump.cpp  InputHandler_Win32_Pump.h  InputHandler_X11.cpp  InputHandler_X11.h  LinuxInputManager.cpp  LinuxInputManager.h
src/arch/Lights/: LightsDriver.cpp  LightsDriver.h  LightsDriver_LinuxParallel.cpp  LightsDriver_Linux_PIUIO.cpp  LightsDriver_Linux_PIUIO_Leds.cpp  LightsDriver_SextetStream.cpp  LightsDriver_SextetStream.h  LightsDriver_SystemMessage.cpp  LightsDriver_Win32Minimaid.cpp  LightsDriver_Win32Parallel.cpp
src/arch/LoadingWindow/: LoadingWindow.cpp  LoadingWindow.h  LoadingWindow_Gtk.cpp  LoadingWindow_Gtk.h  LoadingWindow_GtkModule.cpp  LoadingWindow_MacOSX.h  LoadingWindow_Null.h  LoadingWindow_Win32.cpp  LoadingWindow_Win32.h
src/arch/LowLevelWindow/: LowLevelWindow.h  LowLevelWindow_MacOSX.h  LowLevelWindow_Win32.cpp  LowLevelWindow_Win32.h  LowLevelWindow_X11.cpp  LowLevelWindow_X11.h
src/arch/MemoryCard/: MemoryCardDriver.cpp  MemoryCardDriver.h  MemoryCardDriverThreaded_Folder.cpp  MemoryCardDriverThreaded_Folder.h  MemoryCardDriverThreaded_Linux.cpp  MemoryCardDriverThreaded_Linux.h  MemoryCardDriverThreaded_MacOSX.cpp  (+4 more)
src/smpackage/: SmpackageExportDlg.cpp
src/tests/: test_file_errors.cpp
(+154 files in other folders)
